manifest/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-2
  namespace: demo-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app-2
  template:
    metadata:
      labels:
        app: demo-app-2
    spec:
      containers:
      - name: demo-app-2
        image: httpd:latest
        ports:
        - containerPort: 80
