manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-2
  namespace: demo-apps
spec:
  selector:
    app: demo-app-2
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
