manifest/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-serviceloadbalancer
  namespace: web-ap
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 180
    targetPort: 80
  type: LoadBalancer
