manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: single-host-ingress
  namespace: demo-apps
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - host: single-host.example.com
    http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: demo-app-1
            port:
              number: 80
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: demo-app-2
            port:
              number: 80
